[package]
name = "hash_check"
version = "0.1.0"
authors = ["Thomas Queiroz <thomasqueirozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
anyhow = "1.0"
serde_derive = "1.0"
serde = "1.0"
sha2 = "0.9"
hex = "0.4"
rusqlite = "0.25"
thiserror = "1.0"
sparkpost = { version = "0.5", optional = true}
sendmail = { version = "2.0", optional = true}

[features]
default = ["email_sendmail"]
email_sendmail = ["sendmail", "email"]
email_sparkpost = ["sparkpost", "email"]
email = [] # placeholder

